@@ -9,6 +9,8 @@
   * New walk module with a Walker class for customizable commit walking.
     (Dave Borowitz)
 
+  * New tree_changes_for_merge function in diff_tree. (Dave Borowitz)
+
  BUG FIXES
 
   * Avoid storing all objects in memory when writing pack.
